# ssl-hsi-course-work

./: .pre-commit-config.yaml  pyproject.toml
checkpoints/: indian_pines_model.pth  ksc_model.pth  pavia_university_model.pth
notebooks/: demo.ipynb  ssl_conformer.ipynb  supervised.ipynb  supervised_ca_ffdn_100.ipynb  supervised_ca_ffdn_subset.ipynb  supervised_conformer_100.ipynb  supervised_conformer_subset.ipynb
src/models/ca_ffdn/: __init__.py  bottleneck.py  ca_ffdn.py  eca_block.py
src/models/conformer/: conformer.py  model.py
src/modules/datasets/: __init__.py  hsi.py  unlabeled.py
src/modules/logger/: wb.py
src/modules/trainers/: noisy_student.py  ssl.py  supervised.py
src/utils/: annotator.py  data.py  ema.py  metrics.py  plots.py  seed.py
