[project]
name = "ssl-hsi-course-work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.3",
    "notebook==7.4.3",
    "plotly==6.1.2",
    "pre-commit==4.2.0",
    "scikit-learn==1.6.1",
    "torch==2.7.0",
    "torchmetrics==1.7.2",
    "tqdm==4.67.1",
    "wandb==0.19.11",
]
